demoargos/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/pablopaniagua1/demotechsummit.git'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"demotechsummit-git:latest","namespace":"demotechsummit"},"fieldPath":"spec.template.spec.containers[?(@.name==\"demotechsummit-git\")].image","pause":"false"}]
    openshift.io/generated-by: OpenShiftWebConsole
  name: demotechsummit-git
  generation: 4
  namespace: demotechsummit
  labels:
    app: demotechsummit-git
    app.kubernetes.io/component: demotechsummit-git
    app.kubernetes.io/instance: demotechsummit-git
    app.kubernetes.io/name: httpd
    app.kubernetes.io/part-of: demotechsummit-git-app
    app.openshift.io/runtime: httpd
    app.openshift.io/runtime-version: 2.4-el7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demotechsummit-git
  template:
    metadata:
      labels:
        app: demotechsummit-git
        deploymentconfig: demotechsummit-git
    spec:
      containers:
        - name: demotechsummit-git
          image: >-
            image-registry.openshift-image-registry.svc:5000/demotechsummit/demotechsummit:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
